--- a/public/patterns/01-templates-01-homepage/01-templates-01-homepage.markup-only.html
+++ b/public/patterns/01-templates-01-homepage/01-templates-01-homepage.markup-only.html
@@ -2608,68 +2608,68 @@
           <form class="js-search-form">
             <fieldset>
               <legend class="h1 [ text--center text--white ]">One Easy Flight Search.</legend>
-              <<!--div class="col-xs-12 col-md-12">
+              <!--div class="col-xs-12 col-md-12">
                 <div class="[ p--1 mb--2 ] [ alert alert-danger alert-dismissible ]" role="alert">
                   <strong>First name</strong>: Error text
                 </div>
-        </div>
-        <div class="col-xs-12 col-md-12">
-          <div class="[ p--1 mb--2 ] [ alert alert-warning alert-dismissible ]" role="alert">
-            <strong>Last name</strong>: Error text
-          </div>
-        </div>-->
-        <div class="[ col-xs-12 col-sm-6 col-md-6 ] mb--3 form-error">
-          <label class="d--block text--white mb--1 hidden-xs" for="flight-from">Travelling from</label>
-          <input type="text" id="flight-from" name="flight-from" placeholder="From" value="" class="col-xs-12">
-        </div>
-        <div class="[ col-xs-12 col-sm-6 col-md-6 ] mb--3 form-error">
-          <label class="d--block text--white mb--1 hidden-xs" for="flight-to">Travelling to</label>
-          <input type="text" id="flight-to" name="flight-to" placeholder="To" value="" class="col-xs-12">
-        </div>
-        <div class="[ col-xs-9 col-sm-5 col-md-5 ] mb--3">
-          <label class="d--block text--white mb--1" for="flight-departure"><span class="hidden-xs">Date</span> Departing</label>
-          <input type="text" id="flight-departure" name="flight-departure" placeholder="Date" value="08-09-2017" class="date-popout col-xs-12">
-        </div>
-        <div class="[ col-xs-3 col-sm-2 col-md-2 ] mb--3">
-          <div class="d--inline-block [ text--white text--center ] mb--1">Return?</div>
-          <div class="onoffswitch">
-            <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
-            <label class="onoffswitch-label small" for="myonoffswitch">
+              </div>
+              <div class="col-xs-12 col-md-12">
+                <div class="[ p--1 mb--2 ] [ alert alert-warning alert-dismissible ]" role="alert">
+                  <strong>Last name</strong>: Error text
+                </div>
+              </div>-->
+              <div class="[ col-xs-12 col-sm-6 col-md-6 ] mb--3 form-error">
+                <label class="d--block text--white mb--1 hidden-xs" for="flight-from">Travelling from</label>
+                <input type="text" id="flight-from" name="flight-from" placeholder="From" value="" class="col-xs-12">
+              </div>
+              <div class="[ col-xs-12 col-sm-6 col-md-6 ] mb--3 form-error">
+                <label class="d--block text--white mb--1 hidden-xs" for="flight-to">Travelling to</label>
+                <input type="text" id="flight-to" name="flight-to" placeholder="To" value="" class="col-xs-12">
+              </div>
+              <div class="[ col-xs-9 col-sm-5 col-md-5 ] mb--3">
+                <label class="d--block text--white mb--1" for="flight-departure"><span class="hidden-xs">Date</span> Departing</label>
+                <input type="text" id="flight-departure" name="flight-departure" placeholder="Date" value="08-09-2017" class="date-popout col-xs-12">
+              </div>
+              <div class="[ col-xs-3 col-sm-2 col-md-2 ] mb--3">
+                <div class="d--inline-block [ text--white text--center ] mb--1">Return?</div>
+                <div class="onoffswitch">
+                  <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
+                  <label class="onoffswitch-label small" for="myonoffswitch">
                       <span class="onoffswitch-inner"></span>
                       <span class="onoffswitch-switch"></span>
                   </label>
-          </div>
-        </div>
-        <div class="[ col-xs-12 col-sm-5 col-md-5 ] mb--3 date-return">
-          <label class="d--block text--white mb--1" for="flight-return"><span class="hidden-xs">Date</span> Returning</label>
-          <input type="text" id="flight-return" name="flight-return" placeholder="Date" value="11-09-2017" class="date-popout col-xs-12">
-        </div>
-        <div class="[ col-xs-6 col-sm-6 col-md-6 ] mb--3">
-          <label class="d--block text--white mb--1" for="flight-passengers">Adults</label>
-          <select id="flight-passengers" name="flight-passengers" placeholder="Passengers" value="" class="col-xs-12">
+                </div>
+              </div>
+              <div class="[ col-xs-12 col-sm-5 col-md-5 ] mb--3 date-return">
+                <label class="d--block text--white mb--1" for="flight-return"><span class="hidden-xs">Date</span> Returning</label>
+                <input type="text" id="flight-return" name="flight-return" placeholder="Date" value="11-09-2017" class="date-popout col-xs-12">
+              </div>
+              <div class="[ col-xs-6 col-sm-6 col-md-6 ] mb--3">
+                <label class="d--block text--white mb--1" for="flight-passengers">Adults</label>
+                <select id="flight-passengers" name="flight-passengers" placeholder="Passengers" value="" class="col-xs-12">
                 <option value="one">1</option>
                 <option value="two">2</option>
                 <option value="three">3</option>
                 <option value="four">4</option>
               </select>
-        </div>
-        <div class="[ col-xs-6 col-sm-6 col-md-6 ] mb--3">
-          <label class="d--block text--white mb--1" for="flight-passenger-18">Under 18s</label>
-          <select id="flight-passengers-18" name="flight-passengers-18" placeholder="Passengers" value="" class="col-xs-12">
+              </div>
+              <div class="[ col-xs-6 col-sm-6 col-md-6 ] mb--3">
+                <label class="d--block text--white mb--1" for="flight-passenger-18">Under 18s</label>
+                <select id="flight-passengers-18" name="flight-passengers-18" placeholder="Passengers" value="" class="col-xs-12">
                 <option value="zero">0</option>
                 <option value="one">1</option>
                 <option value="two">2</option>
                 <option value="three">3</option>
                 <option value="four">4</option>
               </select>
+              </div>
+              <div class="[ col-xs-12 col-sm-12 col-md-6 col-md-push-3 ] text--center">
+                <button class="[ button button--orange ] col-md-12">Search for flights</button>
+              </div>
+            </fieldset>
+          </form>
         </div>
-        <div class="[ col-xs-12 col-sm-12 col-md-6 col-md-push-3 ] text--center">
-          <button class="[ button button--orange ] col-md-12">Search for flights</button>
-        </div>
-        </fieldset>
-        </form>
       </div>
-    </div>
     </div>
 
   </section>
