--- a/public/patterns/01-templates-01-homepage/01-templates-01-homepage.markup-only.html
+++ b/public/patterns/01-templates-01-homepage/01-templates-01-homepage.markup-only.html
@@ -2732,7 +2732,7 @@
             <div class="live-search [ col-sm-12 col-md-6 ]">
               <a href="#" class="link--unstyled live-search--data">
                 <div class="pr--0 [ col-md-7 col-lg-7 ]">
-                  <abbr title="Mancester">MCR</abbr> <i class="fa fa-plane"></i> Paris (CDG)
+                  <abbr title="Mancester">MCR</abbr> <img src="https://louriach.github.io/styles-osb/public/images/onestepbooking__asset--plane.svg" alt="" class="plane" /> Paris (CDG)
                 </div>
                 <div class="live-search--meta [ col-md-5 col-lg-5 ]">
                   <span class="mr--1">
@@ -2745,7 +2745,7 @@
             <div class="live-search [ col-sm-12 col-md-6 ]">
               <a href="#" class="link--unstyled live-search--data">
                 <div class="pr--0 [ col-md-7 col-lg-7 ]">
-                  <abbr title="Mancester">MCR</abbr> <i class="fa fa-plane"></i> Berlin (BER)
+                  <abbr title="Mancester">MCR</abbr> <img src="https://louriach.github.io/styles-osb/public/images/onestepbooking__asset--plane.svg" alt="" class="plane" /> Berlin (BER)
                 </div>
                 <div class="live-search--meta [ col-md-5 col-lg-5 ]">
                   <span class="mr--1">
@@ -2758,7 +2758,7 @@
             <div class="live-search [ col-sm-12 col-md-6 ]">
               <a href="#" class="link--unstyled live-search--data">
                 <div class="pr--0 [ col-md-7 col-lg-7 ]">
-                  <abbr title="Mancester">MCR</abbr> <i class="fa fa-plane"></i> Barcelona (BCN)
+                  <abbr title="Mancester">MCR</abbr> <img src="https://louriach.github.io/styles-osb/public/images/onestepbooking__asset--plane.svg" alt="" class="plane" /> Barcelona (BCN)
                 </div>
                 <div class="live-search--meta [ col-md-5 col-lg-5 ]">
                   <span class="mr--1">
@@ -2771,7 +2771,7 @@
             <div class="live-search [ col-sm-12 col-md-6 ]">
               <a href="#" class="link--unstyled live-search--data">
                 <div class="pr--0 [ col-md-7 col-lg-7 ]">
-                  <abbr title="Mancester">MCR</abbr> <i class="fa fa-plane"></i> Dublin (DUB)
+                  <abbr title="Mancester">MCR</abbr> <img src="https://louriach.github.io/styles-osb/public/images/onestepbooking__asset--plane.svg" alt="" class="plane" /> Dublin (DUB)
                 </div>
                 <div class="live-search--meta [ col-md-5 col-lg-5 ]">
                   <span class="mr--1">
