--- a/public/patterns/01-templates-01-homepage/01-templates-01-homepage.rendered.html
+++ b/public/patterns/01-templates-01-homepage/01-templates-01-homepage.rendered.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1498994031242" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1498994031242" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1498994097343" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1498994097343" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -17,8 +17,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1498994031242" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1498994031242" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1498994097343" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1498994097343" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -2760,7 +2760,7 @@
               <div class="live-search [ col-sm-12 col-md-6 ]">
                 <a href="#" class="link--unstyled live-search--data">
                   <div class="pr--0 [ col-md-7 col-lg-7 ]">
-                    <abbr title="Mancester">MCR</abbr> <i class="fa fa-plane"></i> Paris (CDG)
+                    <abbr title="Mancester">MCR</abbr> <img src="https://louriach.github.io/styles-osb/public/images/onestepbooking__asset--plane.svg" alt="" class="plane" /> Paris (CDG)
                   </div>
                   <div class="live-search--meta [ col-md-5 col-lg-5 ]">
                     <span class="mr--1">
@@ -2773,7 +2773,7 @@
               <div class="live-search [ col-sm-12 col-md-6 ]">
                 <a href="#" class="link--unstyled live-search--data">
                   <div class="pr--0 [ col-md-7 col-lg-7 ]">
-                    <abbr title="Mancester">MCR</abbr> <i class="fa fa-plane"></i> Berlin (BER)
+                    <abbr title="Mancester">MCR</abbr> <img src="https://louriach.github.io/styles-osb/public/images/onestepbooking__asset--plane.svg" alt="" class="plane" /> Berlin (BER)
                   </div>
                   <div class="live-search--meta [ col-md-5 col-lg-5 ]">
                     <span class="mr--1">
@@ -2786,7 +2786,7 @@
               <div class="live-search [ col-sm-12 col-md-6 ]">
                 <a href="#" class="link--unstyled live-search--data">
                   <div class="pr--0 [ col-md-7 col-lg-7 ]">
-                    <abbr title="Mancester">MCR</abbr> <i class="fa fa-plane"></i> Barcelona (BCN)
+                    <abbr title="Mancester">MCR</abbr> <img src="https://louriach.github.io/styles-osb/public/images/onestepbooking__asset--plane.svg" alt="" class="plane" /> Barcelona (BCN)
                   </div>
                   <div class="live-search--meta [ col-md-5 col-lg-5 ]">
                     <span class="mr--1">
@@ -2799,7 +2799,7 @@
               <div class="live-search [ col-sm-12 col-md-6 ]">
                 <a href="#" class="link--unstyled live-search--data">
                   <div class="pr--0 [ col-md-7 col-lg-7 ]">
-                    <abbr title="Mancester">MCR</abbr> <i class="fa fa-plane"></i> Dublin (DUB)
+                    <abbr title="Mancester">MCR</abbr> <img src="https://louriach.github.io/styles-osb/public/images/onestepbooking__asset--plane.svg" alt="" class="plane" /> Dublin (DUB)
                   </div>
                   <div class="live-search--meta [ col-md-5 col-lg-5 ]">
                     <span class="mr--1">
@@ -3112,10 +3112,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1498994031242">
+  <script id="pl-js-polyfill-insert-1498994097343">
     (function() {
       if (self != top) {
-        var cb = '1498994031242';
+        var cb = '1498994097343';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -3125,10 +3125,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1498994031242">
+  <script id="pl-js-insert-1498994097343">
     (function() {
       if (self != top) {
-        var cb = '1498994031242';
+        var cb = '1498994097343';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
