--- a/public/patterns/01-templates-02-search-results/01-templates-02-search-results.markup-only.html
+++ b/public/patterns/01-templates-02-search-results/01-templates-02-search-results.markup-only.html
@@ -1964,7 +1964,7 @@
     }
 
     .dropdown-toggle:after {
-      background: url("https://louriach.github.io/styles-osb/public/images/onestepbooking__asset--chevron-down.svg") center center no-repeat transparent;
+      background: url("../images/onestepbooking__asset--chevron-down.svg") center center no-repeat transparent;
       content: "";
       height: 18px;
       position: absolute;
@@ -2093,7 +2093,7 @@
     }
 
     .navbar-brand {
-      background: url("https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--blue.svg") 0 0 no-repeat transparent;
+      background: url("../images/onestepbooking__logo--blue.svg") 0 0 no-repeat transparent;
       height: 21px;
       left: 18px;
       position: absolute;
@@ -2104,7 +2104,7 @@
 
     @media all and (min-width: 1024px) {
       .navbar-brand {
-        background-image: url("../src="https: //louriach.github.io/styles-osb/public/images/onestepbooking__logo--white.svg");
+        background-image: url("../images/onestepbooking__logo--white.svg");
         left: calc(9px*3);
         top: 25px;
       }
